ks8/30-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  namespace: crypto-dashboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: crypto.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: crypto-backend-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-frontend-svc
                port:
                  number: 80
